AM_CPPFLAGS =

lib_LTLIBRARIES = libmiptknzr.la

libmiptknzr_la_LDFLAGS = -version-info 1:0:0

libmiptknzr_la_SOURCES = \
   config.h \
   mip_base_esc_cnvrtr.h \
   mip_base_tknzr_bldr.h \
   mip_base_tknzr.h \
   mip_base_token.cc \
   mip_base_token.h \
   mip_esc_cnvrtr.cc \
   mip_esc_cnvrtr.h \
   mip_tknzr_bldr.cc \
   mip_tknzr_bldr.h \
   mip_tknzr.cc \
   mip_tknzr.h \
   mip_token.h

AM_CXXFLAGS = $(INTI_CFLAGS) -std=c++11 

